# atari

./: .gitignore  Makefile  README.md  claude_review.md  final_implementation_plan.md  pyproject.toml
configs/: config.yaml
configs/agent/: dqn.yaml  modern.yaml
configs/env/: breakout.yaml  pong.yaml  qbert.yaml  seaquest.yaml  space_invaders.yaml
configs/env_protocol/: modern_v5_sticky.yaml  paper_v4.yaml
configs/eval/: default.yaml
configs/hardware/: default.yaml
configs/preset/: modern.yaml  paper.yaml
configs/replay/: prioritized.yaml  uniform.yaml
configs/training/: default.yaml
dashboard/: app.py  utils.py
dashboard/pages/: ablations.py  comparison.py  config_diff.py  training_curves.py  video_player.py
scripts/: evaluate.py  record_video.py  train.py
src/dqn/: __init__.py  agent.py
src/dqn/envs/: __init__.py  factory.py  wrappers.py
src/dqn/evaluation/: evaluator.py
src/dqn/logging/: metrics.py  wandb_logger.py
src/dqn/networks/: __init__.py  dueling.py  encoder.py  nature_dqn.py
src/dqn/replay/: __init__.py  factory.py  prioritized.py  sum_tree.py  uniform.py
src/dqn/training/: checkpoint.py  scheduler.py  trainer.py
src/dqn/utils/: device.py  optimizers.py  seeding.py
tests/: conftest.py  test_agent.py  test_checkpoint.py  test_networks.py  test_replay.py  test_sum_tree.py  test_trainer.py  test_wrappers.py
